# art-ai

./: .github-setup.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  LICENSE  README.Docker.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  notes.txt
.github/workflows/: Image-build-and-push.action.yaml  deploy-trigger.yml  health-check.yml  pr-validation.yml  security-scan.yml
SDK/: README.md  pyproject.toml
SDK/art_ai_sdk/: __init__.py  adapters.py  callbacks.py  client.py  context.py  pipeline.py  prompts.py
SDK/art_ai_sdk/models/: __init__.py  domain.py  fact_check.py  link_checker.py  task.py
SDK/art_ai_sdk/providers/: __init__.py  llm.py  search.py
backend/: .dockerignore  .env-example  Dockerfile  README.md  main.py  pyproject.toml  socket_server.py  utils.py  worker.py
backend-backup/: evidence_chunks.json  main.py  pyproject.toml  utils.py
backend-backup/ai/: domain.py  fact_question.py  prompt.py
backend-backup/core/: ai.py  settings.py
backend-backup/models/: domain.py  link_checker.py
backend/ai/: domain.py  fact_question.py  prompt.py  relevance_checker.py
backend/api/: routes.py  schemas.py
backend/core/: ai.py  celery_client.py  redis_client.py  security.py  settings.py
backend/models/: domain.py  fact_gen.py  link_checker.py
backend/routes/: chat.py
caddy/: Caddyfile
frontend/: .dockerignore  Dockerfile  README.md  drizzle.config.ts  example--.env.local  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: auth-form.tsx  page.tsx
frontend/app/chat/: account-dropdown.tsx  actions.ts  (+2 more)
frontend/hooks/: use-task-socket.ts
frontend/lib/: auth-client.ts  auth.ts  fastapi-client.ts
worker/: .env-example  .gitignore  README.md  evidence_chunks.json  pyproject.toml
worker/ai/: __init__.py  fact_questions.py  relevance_checker.py
worker/core/: __init__.py  ai.py  celery_client.py  database.py  firecrawl_client.py  redis_client.py  settings.py
worker/models/: __init__.py  fact_check.py
worker/tasks/: ai.py
worker/tools/: context.py  search.py
(+11 files in other folders)
