[project]
name = "backend"
version = "0.1.0"
description = "FastAPI orchestrator for Celery worker and Socket.IO updates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.13.1",
    "python-socketio>=5.16.1",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
]
